Fix navbar first item spacing for tablets. Add a red hover/active color for navbar links.

--- a/yes/diazotheme/diazo_resources/css/yes.css
+++ b/yes/diazotheme/diazo_resources/css/yes.css
@@ -736,6 +736,12 @@ span.people-power {
     border-right: 1px solid #e4e4e5;
   }
 
+  #navbar-bottom a:hover,
+  #navbar-bottom a:active
+   {
+    color: #c03d27;
+  }
+
   #nav {
     font-weight: 700;
     font-size: 1.1rem;
@@ -747,7 +753,7 @@ span.people-power {
   }
 
   #nav li:first-child a {
-    padding-left: 5px;
+    padding-left: 9px;
   }
 
   #nav li + li a {
